[project]
name = "carta-example-app"
version = "0.1.0"
description = "Streamlit app to display Carta portfolio data"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.41.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "streamlit-oauth>=0.1.14",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "watchdog>=6.0.0",
]

[tool.ruff]
line-length = 120
src = ["src"]
include = ["src/**/*.py", "tests/**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
pythonpath = [
    "src"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carta_example_app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["src"]
exclude = [
    "tests",
    "*.tests",
    "*.tests.*",
    "tests.*",
]

